# file-converters

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  init.sh
fixtures/: migration_tpl.txt  test.csv  words.csv
src/: file.rs  file_writer.rs  lib.rs
src/date/: mod.rs
src/process/: mod.rs
src/process/poem/: args.rs  cli.rs  file.rs  gbk.rs  lib.rs  mod.rs  processor.rs
src/process/profile_stats/: args.rs  cli.rs  processor.rs
src/process/words/: analyzer.rs  args.rs  cli.rs  mod.rs  processor.rs  words_mpsc.rs  words_rayon.rs
templates/: migration_tpl.txt
