[package]
name = "file-converters"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
askama = "0.12.0"
async-trait = "0.1.68"
calamine = "0.19.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.2.0"
dialoguer = "0.10.3"
dirs = "5.0.0"
lazy_static = "1.4.0"
rayon = "1.6.1"
sentiment = "0.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
trycmd = "0.15.0"


[[bin]]
name = "profile_stats"
path = "src/bin/profile_stats.rs"


[[bin]]
name = "words"
path = "src/bin/words.rs"
